chartTest/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-flask-test
spec:
  selector:
    app: eks-flask-test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080 # Match the port where your Go application is running
